--- a/App/public/css/style.css
+++ b/App/public/css/style.css
@@ -19,3 +19,84 @@ body {
 /* *****************************************************************
 MODAL
 ***************************************************************** */
+.msg {
+  position: fixed;
+  max-height: 100vh;
+  top: -100vh;
+  left: 2vw;
+  right: 2vw;
+  z-index: 1000;
+  padding: 2em;
+  color: var(--color-text);
+  background-color: var(--color-main);
+  box-shadow: var(--shadow-xl);
+  opacity: 0;
+  transition: all 0.5s;
+  display: block;
+}
+.msg h2 {
+  margin: 0;
+}
+.msg .close {
+  position: absolute;
+  top: -1rem;
+  right: -1rem;
+  display: block;
+  width: 2.4rem;
+  line-height: 2rem;
+  text-align: center;
+  text-decoration: none;
+  color: var(--color-main);
+  background-color: var(--color-text);
+  border: 0.2rem solid;
+  border-radius: 50%;
+}
+.msg .active {
+  top: 2vw;
+  opacity: 1;
+}
+.msg-backdrop {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+}
+.msg-backdrop.active {
+  bottom: 0;
+  opacity: 1;
+}
+
+@media screen and (min-width: 960px) {
+  .msg--sm.active {
+    top: 10vh;
+    left: 25vw;
+    right: 25vw;
+  }
+  .msg--md.active {
+    top: 5vh;
+    left: 15vw;
+    right: 15vw;
+  }
+  .msg--lg.active {
+    top: 2vw;
+  }
+}
+/* *****************************************************************
+OVERLAY
+***************************************************************** */
+#overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  display: none;
+}
+#overlay.visible {
+  display: block;
+}
