--- a/App/templates/show_students.html.twig
+++ b/App/templates/show_students.html.twig
@@ -51,8 +51,31 @@
 	<div>
 		<a class="btn btn-primary" href="{{ path('api_student_index') }}">Get STUDENT API LIST</a>
 	</div>
-
-
+	{#  Modal  #}
+	<div id="overlay" class="overlay"></div>
+	<div id="modal" class="modal" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title text-danger" id="exampleModalLabel">
+						<i class="fa fa-archive"></i>
+						Delete Student
+					</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					Attention, Are you sure you want to delete this Student
+				</div>
+				<div class="modal-footer">
+					<button id="cancel" class="btn btn-secondary shadow-none" data-bs-dismiss="modal">Cancel</button>
+					<button id="yes" class="btn btn-danger shadow-none" data-bs-dismiss="modal">Yes I Want
+																																																											                    site</button>
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock %}
 {% block javascripts %}
 	<script type="text/javascript" src="{{ asset('js/main.js') }}"></script>
