--- a/App/templates/api_list.html.twig
+++ b/App/templates/api_list.html.twig
@@ -5,10 +5,9 @@
 {% block body %}
 	<h1>SHOW ALL STUDENTS
 	</h1>
-	<h2>Number of students
-		{{students|length}}</h2>
+
 	<h3>
-		<a href="{{ path('ShowALLStudents') }}" type="button" class="btn btn-danger">Cancel</a>
+		<a href="{{ path('ShowALLStudents') }}" type="button" class="btn btn-danger">Back</a>
 	</h3>
 	<h4>
 		{% for message in app.flashes("success") %}
@@ -26,27 +25,10 @@
 				<th scope="col">Student Number</th>
 				<th scope="col">Dep-Name</th>
 				<th scope="col">Capacity</th>
-				<th scope="col">ACTION</th>
 
 			</tr>
 		</thead>
-		<tbody>
-			{% for student in students %}
-				<tr>
-					<th scope="row">{{student.id}}</th>
-					<td>{{student.FirstName}}</td>
-					<td>{{student.LastName}}</td>
-					<td>{{student.NumEtud}}</td>
-					<td>{{student.department.Name}}</td>
-					<td>{{student.department.capacity}}</td>
-					<td>
-						<a href="{{ path('update',{'id':student.id}) }}" type="button" class="btn btn-info">EDIT</a>
-						<a href="{{ path('delete',{'id':student.id}) }}" type="button" class="btn btn-danger delete-student" data-id="{{student.id}}">DELETE</a>
-
-					</td>
-				</tr>
-			{% endfor %}
-		</tbody>
+		<tbody id="list"></tbody>
 	</table>
 	<div>
 		<a class="btn btn-primary" href="{{ path('api_student_index') }}">Get STUDENT API LIST</a>
@@ -54,5 +36,5 @@
 
 {% endblock %}
 {% block javascripts %}
-	<script type="text/javascript" src="{{ asset('js/main.js') }}"></script>
+	<script type="text/javascript" src="{{ asset('js/api.js') }}"></script>
 {% endblock %}
